Update PIX payment details in index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ footer{text-align:center;color:#777;padding:20px;font-size:14px;}
     <span>Contato: <b id="phoneKey">5541997312887</b></span>
     <button class="copy-btn" onclick="copyToClipboard('phoneKey')">Copiar Nº</button>
 </div>
-<p>Envie o comprovante para este PIX: <b>dd1825ef-9839-4b1e-a525-33cd66c6507a</b> e para o número: <b>5541997312887</b>. Depois, insira o código recebido abaixo e seu WhatsApp.</p>
+<p>Envie o comprovante para aquele PIX: <b>25 REAIS</b> e para o número: <b>5541997312887</b>. Depois, insira o código recebido abaixo e seu WhatsApp.</p>
 <p>O WhatsApp que você colocar será exibido nos anúncios para que os compradores entrem em contato com você.</p>
 <input id="codigoInput" placeholder="Digite seu código">
 <input id="whatsappVendedor" placeholder="Digite seu WhatsApp">
@@ -344,6 +344,9 @@ document.addEventListener('DOMContentLoaded', function(){
         document.body.removeChild(textArea);
     }
 });
+</script>
+</body>
+</html>
 </script>
 </body>
 </html>
