Update PIX amount and add seller fee information

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@ footer{text-align:center;color:#777;padding:20px;font-size:14px;}
 <span>Contato: <b id="phoneKey">5541997312887</b></span>
 <button class="copy-btn" onclick="copyToClipboard('phoneKey')">Copiar Nº</button>
 </div>
-<p>Envie o comprovante para aquele PIX: <b>25 REAIS</b> e para o número: <b>5541997312887</b>. Depois, insira o código recebido abaixo e seu WhatsApp.</p>
-<p>O WhatsApp que você colocar será exibido nos anúncios para que os compradores entrem em contato com você.</p>
+<p>Envie o comprovante para aquele PIX: <b>10t REAIS</b> e para o número: <b>5541997312887</b>. Depois, insira o código recebido abaixo e seu WhatsApp.</p>
+<p>O WhatsApp que você colocar será exibido nos anúncios para que os compradores entrem em contato com você
+  e cada venda que voce fizer sera descontada por voce ser vendedor.</p>
 <input id="codigoInput" placeholder="Digite seu código">
 <input id="whatsappVendedor" placeholder="Digite seu WhatsApp">
 <input id="vNome" placeholder="Seu nome (aparece no perfil)">
