--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 
 <style>
-body{font-family:'Segoe UI',sans-serif;background:#f0f2f5;margin:0}
+body{font-family:Segoe UI,sans-serif;background:#f0f2f5;margin:0}
 .hidden{display:none}
 button{cursor:pointer}
 
@@ -26,24 +26,27 @@ font-size:18px;margin:10px;background:#fff;color:#2563eb;font-weight:bold
 
 .box{
 background:#fff;padding:25px;border-radius:18px;
-max-width:500px;margin:20px auto;
+max-width:520px;margin:20px auto;
 box-shadow:0 10px 30px rgba(0,0,0,.15)
 }
+
 input,textarea{
 width:100%;padding:12px;margin:6px 0;
 border-radius:12px;border:1px solid #ddd
 }
 
 .cards{
-display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));
+display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
 gap:20px;margin:20px
 }
+
 .card{
 background:#fff;border-radius:16px;
 box-shadow:0 6px 16px rgba(0,0,0,.15);
 overflow:hidden;position:relative
 }
-.card img{width:100%;height:220px;object-fit:cover}
+
+.card img{width:100%;height:200px;object-fit:cover}
 .card .info{padding:14px}
 .preco{color:#16a34a;font-weight:bold}
 
@@ -54,17 +57,26 @@ border-radius:50%;display:flex;
 align-items:center;justify-content:center;font-weight:bold
 }
 
+.contato{
+background:#22c55e;color:#fff;
+padding:10px;border-radius:12px;
+text-align:center;margin-top:8px;
+display:block;text-decoration:none;font-weight:bold
+}
+
+.verVendedor{
+background:#3b82f6;color:#fff;
+padding:8px;border-radius:12px;
+text-align:center;margin-top:6px;
+display:block;text-decoration:none;font-size:14px
+}
+
 #painelBtn{
 position:fixed;bottom:20px;right:20px;
 background:#7c3aed;color:#fff;
 padding:14px 20px;border-radius:18px;
 display:none;font-weight:bold;
 box-shadow:0 6px 16px rgba(0,0,0,.25)
-}
-
-.copy-btn{
-background:#2563eb;color:#fff;border:none;
-padding:6px 12px;border-radius:10px
 }
 </style>
 </head>
@@ -88,28 +100,13 @@ padding:6px 12px;border-radius:10px
 <section id="pagamento" class="hidden">
 <div class="box">
 <h3>Ativar painel vendedor</h3>
-
 <p><b>PIX:</b> dd1825ef-9839-4b1e-a525-33cd66c6507a</p>
-
-<p style="display:flex;justify-content:space-between;align-items:center">
-<span>
-Enviar comprovante para o número<br>
-<b id="numeroPix">5541997312887</b>
-</span>
-<button class="copy-btn" onclick="copiar()">Copiar</button>
-</p>
-
+<p><b>Enviar comprovante para:</b> 5541997312887</p>
 <p><b>Valor:</b> R$ 10,00</p>
 
-<p style="font-size:14px">
-Após enviar o comprovante você receberá um código.<br>
-Digite o código abaixo para liberar o painel.
-</p>
-
-<input id="codigo" placeholder="Código recebido (obrigatório)">
+<input id="codigo" placeholder="Código recebido (6 dígitos)">
 <input id="nomeVendedor" placeholder="Seu nome">
 <input id="whatsapp" placeholder="WhatsApp">
-<input type="file" id="foto">
 
 <button onclick="ativarPainel()">Ativar acesso</button>
 <p id="msg" style="color:red;font-weight:bold"></p>
@@ -118,15 +115,12 @@ Digite o código abaixo para liberar o painel.
 
 <section id="painel" class="hidden">
 <div class="box">
-<h3>Painel do vendedor</h3>
-
+<h3>Criar produto</h3>
 <input id="pNome" placeholder="Nome do produto">
 <input id="pPreco" placeholder="Preço">
-<textarea id="pDesc" placeholder="Informações do produto"></textarea>
+<textarea id="pDesc" placeholder="Descrição"></textarea>
 <input type="file" id="pFoto">
-
 <button onclick="publicar()">Publicar produto</button>
-<button onclick="abrirMeus()">Meus anúncios</button>
 </div>
 </section>
 
@@ -134,13 +128,17 @@ Digite o código abaixo para liberar o painel.
 <div class="box">
 <h3>Meus anúncios</h3>
 <div class="cards" id="listaMeus"></div>
-<button onclick="mostrar('painel')">Voltar</button>
 </div>
+</section>
+
+<section id="vendedorProdutos" class="hidden">
+<h3 style="text-align:center">Produtos do vendedor</h3>
+<div class="cards" id="listaVendedor"></div>
 </section>
 
 </main>
 
-<button id="painelBtn" onclick="mostrar('painel')">Painel Vendedor</button>
+<button id="painelBtn" onclick="abrirPainel()">Painel Vendedor</button>
 
 <script>
 const firebaseConfig={
@@ -151,70 +149,75 @@ projectId:"lukstore-bazar"
 firebase.initializeApp(firebaseConfig)
 const db=firebase.firestore()
 
-let vendedor={}
+let vendedor=null
 
 function mostrar(id){
 document.querySelectorAll('main section').forEach(s=>s.classList.add('hidden'))
 document.getElementById(id).classList.remove('hidden')
-if(id==='home') carregarProdutos()
+}
+
+function codigoValido(c){
+return c.length===6 && ['1','2','4','5','9'].includes(c.slice(-1))
 }
 
 function entrarComprador(){
 telaInicial.classList.add('hidden')
 main.classList.remove('hidden')
+painelBtn.style.display='none'
 mostrar('home')
+carregarProdutos()
 }
 
 function entrarVendedor(){
 telaInicial.classList.add('hidden')
 main.classList.remove('hidden')
+if(vendedor){
+painelBtn.style.display='block'
+mostrar('home')
+carregarProdutos()
+}else{
 mostrar('pagamento')
 }
-
-function copiar(){
-navigator.clipboard.writeText('5541997312887')
-alert('Número copiado!')
 }
 
 function ativarPainel(){
-const cod=codigo.value.trim()
-const ult=cod.slice(-1)
-if(cod.length!==6||!['1','4','5','9'].includes(ult)){
-msg.innerText='Código inválido'
+if(!codigoValido(codigo.value)){
+msg.innerText="Código inválido"
 return
 }
-
 vendedor={
 nome:nomeVendedor.value,
 whatsapp:whatsapp.value,
-data:Date.now()
+expira:Date.now()+30*24*60*60*1000
 }
-
 localStorage.setItem('vendedor',JSON.stringify(vendedor))
 painelBtn.style.display='block'
 mostrar('home')
+carregarProdutos()
 }
 
-function checarLogin(){
-const v=localStorage.getItem('vendedor')
-if(!v) return
-const dados=JSON.parse(v)
-if(Date.now()-dados.data>2592000000){
-localStorage.removeItem('vendedor')
-return
-}
-vendedor=dados
-painelBtn.style.display='block'
+function abrirPainel(){
+pNome.value='';pPreco.value='';pDesc.value='';pFoto.value=''
+mostrar('painel')
 }
 
 function publicar(){
+const f=pFoto.files[0]
+if(f){
+const r=new FileReader()
+r.onload=e=>salvar(e.target.result)
+r.readAsDataURL(f)
+}else salvar('')
+}
+
+function salvar(img){
 db.collection('produtos').add({
 nome:pNome.value,
 preco:pPreco.value,
 desc:pDesc.value,
+foto:img,
 vendedor:vendedor.nome,
-whatsapp:vendedor.whatsapp,
-data:firebase.firestore.FieldValue.serverTimestamp()
+whatsapp:vendedor.whatsapp
 }).then(()=>{
 mostrar('meus')
 abrirMeus()
@@ -226,47 +229,68 @@ db.collection('produtos').onSnapshot(snap=>{
 listaProdutos.innerHTML=''
 snap.forEach(doc=>{
 const p=doc.data()
-const card=document.createElement('div')
-card.className='card'
-card.innerHTML=`
+listaProdutos.innerHTML+=`
+<div class="card">
+${p.foto?`<img src="${p.foto}">`:''}
 <div class="info">
 <h4>${p.nome}</h4>
 <div class="preco">R$ ${p.preco}</div>
 <div>${p.vendedor}</div>
+<a class="verVendedor" onclick="verVendedor('${p.whatsapp}')">Ver produtos desse vendedor</a>
+<a class="contato" target="_blank" href="https://wa.me/55${p.whatsapp}">Entrar em contato</a>
+</div>
 </div>`
-listaProdutos.appendChild(card)
+})
+})
+}
+
+function verVendedor(w){
+mostrar('vendedorProdutos')
+db.collection('produtos').where('whatsapp','==',w)
+.onSnapshot(snap=>{
+listaVendedor.innerHTML=''
+snap.forEach(doc=>{
+const p=doc.data()
+listaVendedor.innerHTML+=`
+<div class="card">
+${p.foto?`<img src="${p.foto}">`:''}
+<div class="info">
+<h4>${p.nome}</h4>
+<div class="preco">R$ ${p.preco}</div>
+<a class="contato" target="_blank" href="https://wa.me/55${p.whatsapp}">Entrar em contato</a>
+</div>
+</div>`
 })
 })
 }
 
 function abrirMeus(){
-mostrar('meus')
 db.collection('produtos')
 .where('whatsapp','==',vendedor.whatsapp)
 .onSnapshot(snap=>{
 listaMeus.innerHTML=''
 snap.forEach(doc=>{
 const p=doc.data()
-const card=document.createElement('div')
-card.className='card'
-card.innerHTML=`
-<div class="btnDelete">X</div>
+listaMeus.innerHTML+=`
+<div class="card">
+<div class="btnDelete" onclick="db.collection('produtos').doc('${doc.id}').delete()">X</div>
+${p.foto?`<img src="${p.foto}">`:''}
 <div class="info">
 <h4>${p.nome}</h4>
 <div class="preco">R$ ${p.preco}</div>
+</div>
 </div>`
-card.querySelector('.btnDelete').onclick=()=>{
-if(confirm('Apagar anúncio?')){
-db.collection('produtos').doc(doc.id).delete()
-}
-}
-listaMeus.appendChild(card)
 })
 })
 }
 
-checarLogin()
+const salvo=localStorage.getItem('vendedor')
+if(salvo){
+const v=JSON.parse(salvo)
+if(Date.now()<v.expira) vendedor=v
+else localStorage.removeItem('vendedor')
+}
 </script>
 
 </body>
-  </html>
+</html>
