--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 
 <style>
-/* ====== Estilos Gerais ====== */
 body{font-family:Segoe UI,sans-serif;background:#f0f2f5;margin:0}
 .hidden{display:none}
 button{cursor:pointer}
@@ -58,8 +57,8 @@ width:100%;height:200px;object-fit:cover
 position:absolute;top:10px;right:10px;
 background:red;color:#fff;width:30px;height:30px;
 border-radius:50%;display:flex;
-align-items:center;justify-content:center;font-weight:bold;
-cursor:pointer
+align-items:center;justify-content:center;font-weight:bold;cursor:pointer;
+z-index:10;
 }
 
 .contato{
@@ -106,7 +105,7 @@ box-shadow:0 6px 16px rgba(0,0,0,.25)
 <div class="box">
 <h3>Ativar painel vendedor</h3>
 <p><b>PIX:</b> dd1825ef-9839-4b1e-a525-33cd66c6507a</p>
-<p><b>Enviar comprovante para:</b> 5541997312887 <button onclick="copiar('5541997312887')">Copiar</button></p>
+<p><b>Enviar comprovante para:</b> 5541997312887</p>
 <p><b>Valor:</b> R$ 10,00</p>
 
 <input id="codigo" placeholder="Código recebido">
@@ -125,8 +124,10 @@ box-shadow:0 6px 16px rgba(0,0,0,.25)
 <input id="pPreco" placeholder="Preço">
 <textarea id="pDesc" placeholder="Descrição"></textarea>
 <input type="file" id="pFoto">
+<div style="display:flex;gap:10px;margin-top:6px;">
 <button onclick="publicar()">Publicar produto</button>
-<button onclick="abrirMeus()">Ver seu produto</button>
+<button onclick="abrirMeus()">Ver seus produtos</button>
+</div>
 </div>
 </section>
 
@@ -157,61 +158,82 @@ const db=firebase.firestore()
 
 let vendedor={}
 
+// --- Verifica login automático ---
+if(localStorage.getItem('vendedor')){
+  const v=JSON.parse(localStorage.getItem('vendedor'))
+  // Verifica validade: 30 dias
+  if(Date.now() - v.data < 30*24*60*60*1000){
+    vendedor=v
+    painelBtn.style.display='block'
+    document.getElementById('telaInicial').classList.add('hidden')
+    document.getElementById('main').classList.remove('hidden')
+    mostrar('home')
+    carregarProdutos()
+  }else{
+    localStorage.removeItem('vendedor')
+  }
+}
+
 function mostrar(id){
 document.querySelectorAll('main section').forEach(s=>s.classList.add('hidden'))
 document.getElementById(id).classList.remove('hidden')
 }
 
 function entrarComprador(){
-telaInicial.classList.add('hidden')
-main.classList.remove('hidden')
+document.getElementById('telaInicial').classList.add('hidden')
+document.getElementById('main').classList.remove('hidden')
 mostrar('home')
 carregarProdutos()
 }
 
 function entrarVendedor(){
-telaInicial.classList.add('hidden')
-main.classList.remove('hidden')
+document.getElementById('telaInicial').classList.add('hidden')
+document.getElementById('main').classList.remove('hidden')
 mostrar('pagamento')
 }
 
-// Função para copiar número
-function copiar(num){navigator.clipboard.writeText(num).then(()=>alert('Número copiado!'))}
-
-// Ativar painel com verificação de código
 function ativarPainel(){
-let cod = codigo.value.trim();
-if(cod.length!==6 || !['1','2','4','5','9'].includes(cod.slice(-1))){
-    msg.innerText='Código inválido! Terminar com 1,2,4,5,9 e ter 6 dígitos.';
-    return;
+const cod=codigo.value.trim()
+const ultimo=cod.slice(-1)
+if(cod.length!==6 || !['1','2','4','5','9'].includes(ultimo)){
+  msg.innerText='Código inválido!'
+  return
 }
+if(!nomeVendedor.value || !whatsapp.value){
+  msg.innerText='Preencha todos os campos!'
+  return
+}
+
 vendedor={
 nome:nomeVendedor.value,
 whatsapp:whatsapp.value,
 data:Date.now()
 }
+localStorage.setItem('vendedor',JSON.stringify(vendedor))
 painelBtn.style.display='block'
+msg.innerText=''
 mostrar('home')
 carregarProdutos()
 }
 
-// Abrir painel vendedor (limpa tela de criar produto)
 function abrirPainel(){
-pNome.value='';pPreco.value='';pDesc.value='';pFoto.value='';
+pNome.value='';pPreco.value='';pDesc.value='';pFoto.value=''
 mostrar('painel')
 }
 
-// Publicar produto
 function publicar(){
 const file=pFoto.files[0]
+if(!pNome.value || !pPreco.value){
+  alert('Preencha nome e preço!')
+  return
+}
 if(file){
-const r=new FileReader()
-r.onload=e=>salvar(e.target.result)
-r.readAsDataURL(file)
+  const r=new FileReader()
+  r.onload=e=>salvar(e.target.result)
+  r.readAsDataURL(file)
 }else salvar('')
 }
 
-// Salvar produto no Firebase
 function salvar(img){
 db.collection('produtos').add({
 nome:pNome.value,
@@ -221,14 +243,13 @@ foto:img,
 vendedor:vendedor.nome,
 whatsapp:vendedor.whatsapp
 }).then(()=>{
-alert('Produto publicado!')
-// Após publicar, tela some e só volta ao clicar Painel Vendedor
-mostrar('home')
+// Após publicar, limpa formulário e esconde tela de criar produto
 pNome.value='';pPreco.value='';pDesc.value='';pFoto.value=''
+mostrar('home')
+abrirMeus()
 })
 }
 
-// Carregar produtos para todos verem
 function carregarProdutos(){
 db.collection('produtos').onSnapshot(snap=>{
 listaProdutos.innerHTML=''
@@ -249,7 +270,6 @@ ${p.foto?`<img src="${p.foto}">`:''}
 })
 }
 
-// Ver produtos de um vendedor específico
 function verVendedor(w){
 mostrar('vendedorProdutos')
 db.collection('produtos').where('whatsapp','==',w)
@@ -270,10 +290,7 @@ ${p.foto?`<img src="${p.foto}">`:''}
 })
 }
 
-// Abrir meus produtos (para apagar)
 function abrirMeus(){
-if(!vendedor || !vendedor.whatsapp){ alert('Faça login como vendedor primeiro!'); return; }
-mostrar('meus')
 db.collection('produtos')
 .where('whatsapp','==',vendedor.whatsapp)
 .onSnapshot(snap=>{
@@ -295,4 +312,4 @@ ${p.foto?`<img src="${p.foto}">`:''}
 </script>
 
 </body>
-    </html>
+</html>
