--- a/index.html
+++ b/index.html
@@ -9,79 +9,34 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 
 <style>
-body{font-family:Segoe UI,sans-serif;background:#f0f2f5;margin:0}
-.hidden{display:none}
+body{font-family:'Segoe UI',sans-serif;background:#f0f2f5;margin:0;padding:0;overflow-x:hidden;}
+.hidden{display:none;}
 button{cursor:pointer}
 
-#telaInicial{
-height:100vh;display:flex;flex-direction:column;
-justify-content:center;align-items:center;
-background:linear-gradient(135deg,#2563eb,#7c3aed);
-color:#fff;text-align:center
-}
-#telaInicial button{
-padding:16px 32px;border:none;border-radius:16px;
-font-size:18px;margin:10px;background:#fff;color:#2563eb;font-weight:bold
-}
+/* Tela Inicial */
+#telaInicial{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;background:linear-gradient(135deg,#2563eb,#7c3aed);color:#fff;text-align:center;}
+#telaInicial button{padding:16px 32px;border:none;border-radius:16px;font-size:18px;margin:10px;background:#fff;color:#2563eb;font-weight:bold;transition:.3s;}
+#telaInicial button:hover{transform:scale(1.05);}
 
-.box{
-background:#fff;padding:25px;border-radius:18px;
-max-width:520px;margin:20px auto;
-box-shadow:0 10px 30px rgba(0,0,0,.15)
-}
+/* Box */
+.box{background:#fff;padding:25px;border-radius:18px;max-width:520px;margin:20px auto;box-shadow:0 10px 30px rgba(0,0,0,.15);}
+input,textarea{width:100%;padding:12px;margin:6px 0;border-radius:12px;border:1px solid #ddd;box-sizing:border-box;}
 
-input,textarea{
-width:100%;padding:12px;margin:6px 0;
-border-radius:12px;border:1px solid #ddd
-}
+/* Cards */
+.cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:20px;margin:20px;}
+.card{background:#fff;border-radius:16px;box-shadow:0 6px 16px rgba(0,0,0,.15);overflow:hidden;position:relative;display:flex;flex-direction:column;}
+.card img{width:100%;height:200px;object-fit:cover;}
+.card .info{padding:14px;}
+.preco{color:#16a34a;font-weight:bold;}
 
-.cards{
-display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
-gap:20px;margin:20px
-}
+/* Botões dentro do card */
+.btnDelete{position:absolute;top:10px;right:10px;background:red;color:#fff;width:30px;height:30px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-weight:bold;cursor:pointer;z-index:10;}
+.contato{background:#22c55e;color:#fff;padding:10px;border-radius:12px;text-align:center;margin-top:8px;display:block;text-decoration:none;font-weight:bold;}
+.verVendedor{background:#3b82f6;color:#fff;padding:8px;border-radius:12px;text-align:center;margin-top:6px;display:block;text-decoration:none;font-size:14px;text-align:center;cursor:pointer;}
 
-.card{
-background:#fff;border-radius:16px;
-box-shadow:0 6px 16px rgba(0,0,0,.15);
-overflow:hidden;position:relative
-}
-
-.card img{
-width:100%;height:200px;object-fit:cover
-}
-
-.card .info{padding:14px}
-.preco{color:#16a34a;font-weight:bold}
-
-.btnDelete{
-position:absolute;top:10px;right:10px;
-background:red;color:#fff;width:30px;height:30px;
-border-radius:50%;display:flex;
-align-items:center;justify-content:center;font-weight:bold;cursor:pointer;
-z-index:10;
-}
-
-.contato{
-background:#22c55e;color:#fff;
-padding:10px;border-radius:12px;
-text-align:center;margin-top:8px;
-display:block;text-decoration:none;font-weight:bold
-}
-
-.verVendedor{
-background:#3b82f6;color:#fff;
-padding:8px;border-radius:12px;
-text-align:center;margin-top:6px;
-display:block;text-decoration:none;font-size:14px
-}
-
-#painelBtn{
-position:fixed;bottom:20px;right:20px;
-background:#7c3aed;color:#fff;
-padding:14px 20px;border-radius:18px;
-display:none;font-weight:bold;
-box-shadow:0 6px 16px rgba(0,0,0,.25)
-}
+/* Painel Vendedor Flutuante */
+#painelBtn{position:fixed;bottom:20px;right:20px;background:#7c3aed;color:#fff;padding:14px 20px;border-radius:18px;display:none;font-weight:bold;box-shadow:0 6px 16px rgba(0,0,0,.25);cursor:pointer;transition:.3s;}
+#painelBtn:hover{transform:scale(1.05);}
 </style>
 </head>
 
@@ -96,19 +51,21 @@ box-shadow:0 6px 16px rgba(0,0,0,.25)
 
 <main id="main" class="hidden">
 
+<!-- Tela Produtos -->
 <section id="home" class="hidden">
-<h3 style="text-align:center">Produtos</h3>
+<h3 style="text-align:center;">Produtos</h3>
 <div class="cards" id="listaProdutos"></div>
 </section>
 
+<!-- Tela Ativar Vendedor -->
 <section id="pagamento" class="hidden">
 <div class="box">
 <h3>Ativar painel vendedor</h3>
-<p><b>PIX:</b> dd1825ef-9839-4b1e-a525-33cd66c6507a</p>
-<p><b>Enviar comprovante para:</b> 5541997312887</p>
+<p><b>PIX:</b> dd1825ef-9839-4b1e-a525-33cd66c6507a <button onclick="copyText('dd1825ef-9839-4b1e-a525-33cd66c6507a')">Copiar</button></p>
+<p><b>Enviar comprovante para:</b> 5541997312887 <button onclick="copyText('5541997312887')">Copiar</button></p>
 <p><b>Valor:</b> R$ 10,00</p>
 
-<input id="codigo" placeholder="Código recebido">
+<input id="codigo" placeholder="Código recebido (6 dígitos)">
 <input id="nomeVendedor" placeholder="Seu nome">
 <input id="whatsapp" placeholder="WhatsApp (DDD + número)">
 
@@ -117,6 +74,7 @@ box-shadow:0 6px 16px rgba(0,0,0,.25)
 </div>
 </section>
 
+<!-- Tela Criar Produto -->
 <section id="painel" class="hidden">
 <div class="box">
 <h3>Criar produto</h3>
@@ -124,22 +82,23 @@ box-shadow:0 6px 16px rgba(0,0,0,.25)
 <input id="pPreco" placeholder="Preço">
 <textarea id="pDesc" placeholder="Descrição"></textarea>
 <input type="file" id="pFoto">
-<div style="display:flex;gap:10px;margin-top:6px;">
-<button onclick="publicar()">Publicar produto</button>
+<button onclick="publicarProduto()">Publicar produto</button>
 <button onclick="abrirMeus()">Ver seus produtos</button>
-</div>
 </div>
 </section>
 
+<!-- Tela Meus Produtos -->
 <section id="meus" class="hidden">
 <div class="box">
 <h3>Meus anúncios</h3>
 <div class="cards" id="listaMeus"></div>
+<button onclick="abrirPainel()">Voltar</button>
 </div>
 </section>
 
+<!-- Tela Produtos de um Vendedor -->
 <section id="vendedorProdutos" class="hidden">
-<h3 style="text-align:center">Produtos do vendedor</h3>
+<h3 style="text-align:center;">Produtos do vendedor</h3>
 <div class="cards" id="listaVendedor"></div>
 </section>
 
@@ -158,100 +117,80 @@ const db=firebase.firestore()
 
 let vendedor={}
 
-// --- Verifica login automático ---
-if(localStorage.getItem('vendedor')){
-  const v=JSON.parse(localStorage.getItem('vendedor'))
-  // Verifica validade: 30 dias
-  if(Date.now() - v.data < 30*24*60*60*1000){
-    vendedor=v
-    painelBtn.style.display='block'
-    document.getElementById('telaInicial').classList.add('hidden')
-    document.getElementById('main').classList.remove('hidden')
-    mostrar('home')
-    carregarProdutos()
-  }else{
-    localStorage.removeItem('vendedor')
-  }
-}
-
+// Funções de navegação
 function mostrar(id){
 document.querySelectorAll('main section').forEach(s=>s.classList.add('hidden'))
 document.getElementById(id).classList.remove('hidden')
 }
 
 function entrarComprador(){
-document.getElementById('telaInicial').classList.add('hidden')
-document.getElementById('main').classList.remove('hidden')
+telaInicial.classList.add('hidden')
+main.classList.remove('hidden')
 mostrar('home')
 carregarProdutos()
 }
 
 function entrarVendedor(){
-document.getElementById('telaInicial').classList.add('hidden')
-document.getElementById('main').classList.remove('hidden')
+telaInicial.classList.add('hidden')
+main.classList.remove('hidden')
 mostrar('pagamento')
 }
 
+// Ativar painel vendedor com código válido
 function ativarPainel(){
-const cod=codigo.value.trim()
-const ultimo=cod.slice(-1)
-if(cod.length!==6 || !['1','2','4','5','9'].includes(ultimo)){
-  msg.innerText='Código inválido!'
-  return
+const cod = codigo.value.trim()
+if(cod.length!==6 || !['1','4','5','9','2'].includes(cod.slice(-1))){
+document.getElementById('msg').innerText='Código inválido!'
+return
 }
-if(!nomeVendedor.value || !whatsapp.value){
-  msg.innerText='Preencha todos os campos!'
-  return
-}
-
 vendedor={
-nome:nomeVendedor.value,
-whatsapp:whatsapp.value,
+nome:nomeVendedor.value.trim(),
+whatsapp:whatsapp.value.trim(),
 data:Date.now()
 }
+if(!vendedor.nome || !vendedor.whatsapp){alert('Preencha todos os campos'); return;}
 localStorage.setItem('vendedor',JSON.stringify(vendedor))
 painelBtn.style.display='block'
-msg.innerText=''
 mostrar('home')
 carregarProdutos()
 }
 
+// Abrir Painel
 function abrirPainel(){
 pNome.value='';pPreco.value='';pDesc.value='';pFoto.value=''
 mostrar('painel')
 }
 
-function publicar(){
+// Publicar produto
+function publicarProduto(){
 const file=pFoto.files[0]
-if(!pNome.value || !pPreco.value){
-  alert('Preencha nome e preço!')
-  return
-}
 if(file){
-  const r=new FileReader()
-  r.onload=e=>salvar(e.target.result)
-  r.readAsDataURL(file)
-}else salvar('')
+const r=new FileReader()
+r.onload=e=>salvarProduto(e.target.result)
+r.readAsDataURL(file)
+}else salvarProduto('')
 }
 
-function salvar(img){
+// Salvar produto no Firebase
+function salvarProduto(img){
 db.collection('produtos').add({
 nome:pNome.value,
 preco:pPreco.value,
 desc:pDesc.value,
 foto:img,
 vendedor:vendedor.nome,
-whatsapp:vendedor.whatsapp
+whatsapp:vendedor.whatsapp,
+data:firebase.firestore.FieldValue.serverTimestamp()
 }).then(()=>{
-// Após publicar, limpa formulário e esconde tela de criar produto
 pNome.value='';pPreco.value='';pDesc.value='';pFoto.value=''
-mostrar('home')
+mostrar('meus')
 abrirMeus()
 })
 }
 
+// Carregar todos os produtos
 function carregarProdutos(){
-db.collection('produtos').onSnapshot(snap=>{
+db.collection('produtos').orderBy('data','desc').onSnapshot(snap=>{
 listaProdutos.innerHTML=''
 snap.forEach(doc=>{
 const p=doc.data()
@@ -270,10 +209,10 @@ ${p.foto?`<img src="${p.foto}">`:''}
 })
 }
 
+// Ver produtos de um vendedor
 function verVendedor(w){
 mostrar('vendedorProdutos')
-db.collection('produtos').where('whatsapp','==',w)
-.onSnapshot(snap=>{
+db.collection('produtos').where('whatsapp','==',w).onSnapshot(snap=>{
 listaVendedor.innerHTML=''
 snap.forEach(doc=>{
 const p=doc.data()
@@ -290,16 +229,15 @@ ${p.foto?`<img src="${p.foto}">`:''}
 })
 }
 
+// Abrir meus produtos
 function abrirMeus(){
-db.collection('produtos')
-.where('whatsapp','==',vendedor.whatsapp)
-.onSnapshot(snap=>{
+db.collection('produtos').where('whatsapp','==',vendedor.whatsapp).onSnapshot(snap=>{
 listaMeus.innerHTML=''
 snap.forEach(doc=>{
 const p=doc.data()
 listaMeus.innerHTML+=`
 <div class="card">
-<div class="btnDelete" onclick="db.collection('produtos').doc('${doc.id}').delete()">X</div>
+<div class="btnDelete" onclick="apagarProduto('${doc.id}')">X</div>
 ${p.foto?`<img src="${p.foto}">`:''}
 <div class="info">
 <h4>${p.nome}</h4>
@@ -308,6 +246,18 @@ ${p.foto?`<img src="${p.foto}">`:''}
 </div>`
 })
 })
+}
+
+// Apagar produto
+function apagarProduto(id){
+if(confirm('Deseja realmente apagar este produto?')){
+db.collection('produtos').doc(id).delete()
+}
+}
+
+// Copiar textos
+function copyText(text){
+navigator.clipboard.writeText(text).then(()=>alert('Copiado!')).catch(()=>alert('Erro ao copiar'))
 }
 </script>
 
